partial-outage/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: partial-outage
  annotations:
    argocd.argoproj.io/sync-wave: "0"
