partial-outage/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: backend
  ports:
    - port: 5678
      targetPort: 5678
