partial-outage/manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
